--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   animations: ^2.0.7
   flutter_staggered_animations: ^1.1.1
   get:
+  http: ^0.13.0
+
 
 dev_dependencies:
   flutter_test:
