--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,10 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  connectivity: ^3.0.6
+  shared_preferences: ^2.0.12
+  flutter_swiper: ^1.1.6
+  fluttertoast: ^8.0.7
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.1.6
   form_field_validator: ^1.1.0
@@ -40,6 +44,7 @@ dependencies:
   flutter_staggered_animations: ^1.1.1
   get:
   http: ^0.13.0
+  carousel_slider: ^4.2.1
 
 
 dev_dependencies:
